/*
SPDX-FileCopyrightText: 2022-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package atomix.multiraft.counter.v1;

import "atomix/multiraft/v1/descriptor.proto";

message CounterSnapshot {
    int64 value = 1;
}

message IncrementInput {
    int64 delta = 1;
}

message IncrementOutput {
    int64 value = 1;
}

message DecrementInput {
    int64 delta = 1;
}

message DecrementOutput {
    int64 value = 1;
}

message GetInput {

}

message GetOutput {
    int64 value = 1;
}

message SetInput {
    int64 value = 1;
}

message SetOutput {
    int64 value = 1;
}

message CompareAndSetInput {
    int64 compare = 1;
    int64 update = 2;
}

message CompareAndSetOutput {
    int64 value = 1;
}
